# masterPOS

./: .gitignore  AGENTS.md  PWA_INSTALLATION.md  PWA_SETUP_COMPLETE.md  README.md  TYPESCRIPT_FIX_SUMMARY.md  index.html  package-lock.json  package.json  pos_layout.jsx  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.js
public/: browserconfig.xml  config-dev.json  config-local.json  config-web.json  config.json  manifest.json
public/icons/: README.md
scripts/: add_ro_prefix.py  generate-icons.js
src/: main.tsx  pwa-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: checkPrice.test.ts  checkPrice.ts  configLoader.ts  routes.tsx  store.test.ts  store.ts
src/components/pos/: ActionsPanel.tsx  CartTable.tsx  ClientCard.tsx  Keypad.tsx  PaymentButtons.tsx  PosLineForm.tsx  SettingsModal.tsx  TotalsPanel.tsx
src/features/cart/: selectors.ts  types.ts  utils.test.ts  utils.ts
src/lib/: money.ts  shortcuts.ts  useGlobalRequestKeyboard.ts  useRequestKeyboard.ts
src/mocks/: customers.ts  products.ts
src/pages/: PosPage.tsx
src/styles/: globals.css  keyboard-toggle.css
src/types/: global.d.ts  pwa.d.ts
