[package]
name = "masterpos"
version = "0.0.0"
edition = "2021"
description = "MasterPOS desktop application"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-open"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
